sumo/tests/traci/VariableSubscription/errors/UnknownCommand/errors.traci
Error: Requested command not implemented (255): Command not implemented in sumo
